<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/colorPage2"
    android:elevation="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/size20sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/desc_icon_add"
        android:paddingStart="8dp"
        android:paddingEnd="10dp"
        android:src="@mipmap/ic_add_white" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/ivAdd"
        android:contentDescription="@string/desc_icon_search"
        android:paddingStart="15dp"
        android:paddingEnd="7dp"
        android:src="@mipmap/ic_search_white" />

    <TextView
        android:id="@+id/toolBarLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLine"
        android:visibility="gone" />

</RelativeLayout>